# dwarfAlp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run_gui.py  setup.md
docs/: DWARF API2.txt  architecture.md  integration_plan.md
scripts/: dump_config.py
src/dwarf_alpaca/: __init__.py  cli.py  device_profile.py  discovery.py  server.py
src/dwarf_alpaca/config/: settings.py  yaml_loader.py
src/dwarf_alpaca/devices/: __init__.py  camera.py  filterwheel.py  focuser.py  telescope.py  utils.py
src/dwarf_alpaca/dwarf/: __init__.py  ble_packets.py  ble_provisioner.py  exposure.py  ftp_client.py  http_client.py  rtsp_client.py  session.py  state.py  ws_client.py
src/dwarf_alpaca/gui/: __init__.py  app.py  logging.py  server.py  workers.py
src/dwarf_alpaca/management/: __init__.py  router.py
src/dwarf_alpaca/proto/: __init__.py  dwarf_messages.py  rgb.proto  track.proto
src/dwarf_alpaca/provisioning/: __init__.py  cli.py  workflow.py
tests/: test_access_logging.py  test_camera_endpoints.py  test_cli_start.py  test_discovery.py  test_exposure_resolver.py  test_filterwheel_endpoints.py  test_fits_decode.py  test_focuser_direction.py  test_focuser_endpoints.py  test_gui_settings.py  test_http_client_paths.py  test_management_devices.py  test_master_lock_message.py  test_provisioning.py  test_session_acquire.py  test_session_camera.py  test_session_config.py  test_session_focuser.py  test_session_telescope.py  test_state_store.py  test_telescope_endpoints.py  test_ws_client.py
tests/fixtures/: params_config_sample.json
